# Advent-of-Code

./: .gitignore  output.txt  pyproject.toml
2022/Day_1/OCaml/: dune-project
2022/Day_1/OCaml/test/: dune
2022/Day_1/Python/aoc_day1_python/: main.py
2023/Day_1/: treb.py  trebuchet.py
2023/Day_2/: cube_conundrum.py
2023/Day_3/: gear_ratios.py
2023/Day_4/: scratchcard.py
2023/Day_5/: almanac.py
2023/Day_6/: boat_race.py
2023/Day_7/: camel_poker.py
2023/Day_8/: circuit_map.py  circuit_map_brute.py
2023/Day_9/: desert_analyzer.py
Day_1/Python/: pyproject.toml
Day_1/Rust/: Cargo.toml
Day_1/Rust/src/: main.rs
